Refactor overlay host from JavaFX WebView to SWT Edge/WebView2